# hensight

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Deprecated--HensightStatsManager.py  Deprecated--TBAData.py  HensightStatsManager.py  LICENSE  MatchData.py  OLD--SlideHTMLGenerators.py  README.md  SlideHTMLGenerators.py  TBAData.py  bun.lockb  charts.py  data.txt  flake.nix  hensight.html  main.py  nexusData.py  package.json  progress.py  statbotData.py  tbaPulseData.py  triva.py
..bfg-report/2024-04-08/10-54-43/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2024-04-08/10-54-43/protected-dirt/: c141be31-HEAD.csv
.github/workflows/: rust.yml
src/: lib.rs  main.rs  model.rs  query.rs
static/: FriedEgg.glb
templates/: autos.html  autos2.html  autos3.html  cad.html  chickenspin.html  comming_soon.html  common.js  crossy.html  dashboard.html  drive_team.html  games.html  hensight.html  landing.html  menu.html  misc.html  pulse_ranking.html  pulse_schedule.html  pulsemain.html  reveal.html  robomenu.html  style.css  test.html  triva.html
